# mcp-coordinator

./: .gitignore  PRD_MAIN.MD  package-lock.json
.github/workflows/: release.yml
.sisyphus/drafts/: sync-redesign.md
.sisyphus/plans/: sync-redesign.md  v1-wrapup.md
app/: package-lock.json  package.json  vitest.config.ts
app/src/: App.css  App.tsx  index.css  main.tsx
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/src/: lib.rs  main.rs  paths.rs  watcher.rs
app/src-tauri/src/commands/: config.rs  machines.rs  mod.rs  read.rs  remote.rs  ssh.rs  ssh_keys.rs  sync.rs  system.rs
app/src-tauri/src/config/: claude.rs  converter.rs  mod.rs  opencode.rs  platform_adapter.rs
app/src-tauri/src/db/: machines.rs  mod.rs  ssh_keys.rs  sync_history.rs
app/src-tauri/src/ssh/: connection.rs  encryption.rs  key_manager.rs  mod.rs  pool.rs  sftp.rs
app/src-tauri/src/sync/: conflict_detector.rs  diff_generator.rs  engine.rs  mod.rs
app/src-tauri/tools/: verify_key_pair.rs
app/src/components/layout/: Sidebar.tsx
app/src/components/machine/: AddMachineDialog.tsx  EditMachineDialog.tsx
app/src/hooks/: useConfig.ts  useMachines.ts  useSSH.ts  useSystem.ts
app/src/lib/: tauri.ts  transformers.ts
app/src/stores/: appStore.ts
app/src/test/: setup.ts
app/src/types/: config.ts  index.ts  machine.ts  server.ts  ssh.ts  sync.ts  system.ts
docs/: Development_Guide.md  Development_Guideline.md  IMPLEMENTATION_PLAN.md  PLAINTEXT_STORAGE_WARNING.md  RSA_FIX_MULTI_ALGORITHM.md  SSH_AUTH_TROUBLESHOOTING.md  SSH_FIX_SUMMARY.md  SSH_KEY_NOT_AUTHORIZED.md  Technical_Specifications.md
(+12 files in other folders)
