[package]
name = "mcp-control-hub"
version = "0.1.0"
description = "MCP Control Hub - Centralized MCP Configuration Manager"
authors = ["MCP Control Hub Team"]
edition = "2021"

[lib]
name = "mcp_control_hub_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1.0"
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
dirs = "5"


