[package]
name = "mcp-control-hub"
version = "0.1.0"
description = "MCP Control Hub - Centralized MCP Configuration Manager"
authors = ["MCP Control Hub Team"]
edition = "2021"

[lib]
name = "mcp_control_hub_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1.0"
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
dirs = "5"
ssh2 = "0.9"
aes-gcm = "0.10.3"
base64 = "0.22.1"
rand = "0.8"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }
keyring = "3.6.3"
async-trait = "0.1.89"
md5 = "0.8.0"
sha2 = "0.10.9"
ssh-key = { version = "0.6", features = ["std"] }
notify = "8.2.0"
tauri-plugin-fs = "2.4.5"
similar = "2.4"

[dev-dependencies]
tempfile = "3.24.0"


